<resources>
    <string name="app_name">VeggieStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="select_location">Select Location</string>
    <string name="category">Category&#160;</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">&#160;and&#160;</string>
    <string name="t_n_c">Terms and Condition</string>
    <string name="sign_up_agree">By signing up, you agree to the</string>
    <string name="already_registered">Already registered?&#160;</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New user?&#160;</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password? </string>
    <string name="rupees">&#x20B9;%s</string>
    <string name="rupees_minus">-&#x20B9;%s</string>
    <string name="checkout_alert">Orders above &#x20B9;%s, shipping charge will be &#x20B9;0.</string>
    <string name="total_rupees">Total: &#x20B9;%s</string>
    <string name="cart_count">%d item(s)</string>
    <string name="weight_unit">%s%s</string>
    <string name="available_price">&#x20B9;%s - %s%s</string>
    <string name="address_dialog">%s, %s, %s</string>
    <string name="cart_q_desc">(%s × &#x20B9;%s)</string>
    <string name="area_city_pin">%s, %s - %s</string>
    <string name="internet_snackbar">Couldn\'t connect</string>
    <string name="order_id">Order ID: %s</string>
    <string name="no_location">Please select a location.</string>
    <string name="delivery_on"> Delivery: %s</string>
    <string name="payment_mode">Payment: %s</string>
    <string name="order_address">%s, %s, %s</string>
    <string name="od_order_number">Order: #%s</string>
    <string name="od_order_date">Date: %s</string>
    <string name="feedback">Feedback: %s</string>
    <string name="order_history_date_time">%s %s</string>
</resources>
