<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="locationviewmodel"
            type="com.amanpatel.veggiestoretest0.LocationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/start_shopping_button">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/progress_bar_location"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <FrameLayout
                        android:id="@+id/banner_layout"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">
                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/pager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="top"
                            android:overScrollMode="never" />
                    </FrameLayout>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/location_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/banner_layout"
                    android:layout_margin="16dp"
                    android:elevation="@dimen/card_elevation"
                    app:cardCornerRadius="@dimen/card_corner_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="4dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/select_location_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:text="@string/select_location"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="#000" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:id="@+id/city_selector"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/city_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="10"
                                android:hint="@string/city"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_weight="1"
                                android:src="@drawable/baseline_arrow_drop_down_black_18dp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:id="@+id/area_selector"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/area_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="10"
                                android:hint="@string/area"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_weight="1"
                                android:src="@drawable/baseline_arrow_drop_down_black_18dp" />
                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:id="@+id/login_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_card"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_registered"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/log_in_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:textColor="@color/primaryColor" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_below="@+id/login_text_layout"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sign_up_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/primaryColor" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_shopping_button"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryColor"
            android:fontFamily="@font/roboto"
            android:onClick="startMainActivity"
            android:text="@string/start_shopping"
            android:textAllCaps="false"
            android:textColor="#ffff" />
    </RelativeLayout>
</layout>