<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signupviewmodel"
            type="com.amanpatel.veggiestoretest0.SignUpViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/sign_up_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="16dp"
                    android:elevation="@dimen/card_elevation"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="4dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/sign_up_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:focusable="true"
                                android:text="@string/sign_up"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:focusable="true"
                            android:focusableInTouchMode="true">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/name_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:afterTextChanged="@{(editable)->signupviewmodel.setName(editable)}"
                                android:background="@null"
                                android:focusable="true"
                                android:hint="@string/name"
                                android:inputType="textCapWords"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/email_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:afterTextChanged="@{(editable)->signupviewmodel.setEmail(editable)}"
                                android:background="@null"
                                android:focusable="true"
                                android:hint="@string/email_address"
                                android:inputType="textEmailAddress"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/phone_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:afterTextChanged="@{(editable)->signupviewmodel.setPhone(editable)}"
                                android:background="@null"
                                android:focusable="true"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/password_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:afterTextChanged="@{(editable)->signupviewmodel.setPassword(editable)}"
                                android:background="@null"
                                android:focusable="true"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/confirm_password_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:afterTextChanged="@{(editable)->signupviewmodel.matchPassword(editable)}"
                                android:background="@null"
                                android:focusable="true"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.12"
                            android:background="#000000" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/sign_up_btn"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@color/primaryColor"
                            android:fontFamily="@font/roboto"
                            android:text="@={signupviewmodel.signUpBtn}"
                            android:textAllCaps="false" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_up_card"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sign_up_agree" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/privacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/privacy_policy"
                            android:textColor="@color/primaryColor" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/and" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tnc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_n_c"
                            android:textColor="@color/primaryColor" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</layout>