<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_categories"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <RelativeLayout
            android:id="@+id/date_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/calender_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/outline_calendar_today_black_18dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/calender_icon"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:text="28-06-2018" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="Confirmed"
                android:textAllCaps="true"
                android:textColor="@color/green" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_status"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:text="VS20912" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delivery_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_number"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:text="@string/delivery_on" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/payment_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delivery_on"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:text="@string/payment_mode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/payment_mode"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:text="@string/order_address" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/outline_store_black_18dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:layout_margin="4dp"
                    android:text="@string/rupees"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/outline_person_outline_black_18dp"
                    android:text="You" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>